syntax = "proto3";

package identity;

option go_package = "github.com/travoroguna/sportsbook-rpc/proto/identity";

import "google/protobuf/timestamp.proto";

// Identity service for user management
service IdentityService {
  // Create a new user
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {}

  // Get user by ID
  rpc GetUser(GetUserRequest) returns (UserResponse) {}

  // Update existing user
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}

  // Delete a user
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}

  // Authenticate user (login)
  rpc Login(LoginRequest) returns (LoginResponse) {}

  // Verify user account
  rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse) {}
}

// User represents a user in the system
message User {
  uint64 id = 1;
  string phone = 2;
  string email = 3;
  bool is_active = 4;
  bool is_verified = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

// Request to create a new user
message CreateUserRequest {
  string phone = 1;
  string password = 2;
  string email = 3;
}

// Request to get a user by ID
message GetUserRequest {
  uint64 id = 1;
}

// Request to update an existing user
message UpdateUserRequest {
  uint64 id = 1;
  optional string phone = 2;
  optional string password = 3;
  optional string email = 4;
  optional bool is_active = 5;
}

// Response containing user information
message UserResponse {
  User user = 1;
}

// Request to delete a user
message DeleteUserRequest {
  uint64 id = 1;
}

// Response after deleting a user
message DeleteUserResponse {
  bool success = 1;
}

// Login request
message LoginRequest {
  string email = 1;
  string password = 2;
}

// Login response with authentication token
message LoginResponse {
  string token = 1;
  User user = 2;
}

// Request to verify a user account
message VerifyUserRequest {
  string verification_code = 1;
  string email = 2;
}

// Response after verifying a user
message VerifyUserResponse {
  bool success = 1;
}
